# parsers

./: .gitignore  LICENSE  README.md  stack.yaml
eparser/: README.md  eparser.cabal
eparser/src/: EJson.hs  EParser.hs
eparser/test/: test.json
parsers/: parsers.cabal
parsers/src/: Json.hs  Parser.hs  Xml.hs
parsers/test/: Spec.hs  test.xml  test2.xml
