cabal-version:      >= 1.12

name:               parsers
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/ayaskovets/parsers#readme>
homepage:           https://github.com/ayaskovets/parsers#readme
author:             Andrei Yaskovets
copyright:          2021 Andrei Yaskovets
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files: test/test.json
                    test/test2.json
                    test/test.xml
                    test/test2.xml

source-repository head
  type:             git
  location:         https://github.com/ayaskovets/parsers

library
  exposed-modules:  Parser,
                    Json,
                    Xml
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5,
                    containers
  hs-source-dirs:   src
  ghc-options:      -Wall

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5,
                    parsers
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
